  8-Oct-2019  V0.77 Upversion schema after successful build
 14-Oct-2019  V0.78 Add support for sequence isoforms, entry molecular weight, turn off SIFTS for
                    references and alignments,  and various schema adjusts.
 14-Oct-2019  V0.79 Add test cases and fix exceptions for missing sequence difference details.
 14-Oct-2019  V0.80 Fix linting issue and update documentation in configuration example file -
 16-Oct-2019  V0.81 Filter reference sequence assignments marked as self-reference - added tests for GO Id consistency
 17-Oct-2019  V0.82 Preserve annotations on self-referenced sequences for now/shift ATC depth
 19-Oct-2019  V0.83 Strip missing/empty values from subcategory aggregates/handle missing accession codes on struct_ref_seq records
 19-Oct-2019  V0.84 Abandon reliance on ref_id/align_id consistency in struct_ref_* categories.
 20-Oct-2019  V0.85 Update type, coverage and configuration for latest IHM dictioanry update
 23-Oct-2019  V0.86 Add nesting property to objects with unit cardinality,
                    don't propagate exact-match/suggest search contexts to full-text
 25-Oct-2019  V0.87 Address a couple of anomalous sequence accession code issues and sync up mock repos
 26-Oct-2019  V0.88 Address anomalous non-polymer reference sequence records.
  2-Nov-2019  V0.89 Add bird specific citation handling methods and rerun
 23-Nov-2019  V0.90 Move pipeline to py38
  4-Dec-2019  V0.91 Add type specific entity collections (branch entity-type-division)
  5-Dec-2019  V0.92 Update search contexts for repository holdings.
  8-Dec-2019  V0.93 Partially handle odd cases of missing entity_poly category and adjust enumeration for nonpolymer instances features
                    Adjust error reporting in getProtSecStructFeatures(), tweak mandatory items for fiber diffraction, handle boundary
                    counts for cases with no macromolecules