@@ -67,6 +67,7 @@
 #  1-Nov-2019 jdw exclude category pdbx_molecule from core_entry and rename citation in bird_chem_comp_core
 # 25-Nov-2019 jdw add CITATION_REFERENCE_CACHE_DIR and CHEM_COMP_MODEL_CACHE_DIR -> CHEM_COMP_CACHE_DIR
 #  5-Dec-2019 jdw Major revisions for typed entity collections and assocated search contexts.
+#  9-Dec-2019 jdw Add placeholders for uniprot_core
 #
 # ExDB configuration file example
 ---
@@ -353,6 +354,9 @@ content_info_helper_configuration:
         drugbank_core:
             VERSION: 5.1.0
             INSTANCE_DATA_TYPE_INFO_FILENAME:
+        uniprot_core:
+            VERSION: 1.0.0
+            INSTANCE_DATA_TYPE_INFO_FILENAME:
     #
     # Source dictionary locators -
     #
@@ -415,6 +419,9 @@ content_info_helper_configuration:
         - PDBX_DICT_LOCATOR
         - IHMDEV_DICT_LOCATOR
         - FLR_DICT_LOCATOR
+        - RCSB_DICT_LOCATOR
+      uniprot_core:
+        - PDBX_DICT_LOCATOR
         - RCSB_DICT_LOCATOR
 
     item_transformers:
@@ -1330,6 +1337,9 @@ content_info_helper_configuration:
                 - drugbank_info
                 - drugbank_target
             EXCLUDE: []
+        uniprot_core:
+            INCLUDE: []
+            EXCLUDE: []
     schema_block_attributes:
         ihm_dev:
             ATTRIBUTE_NAME: structure_id
@@ -1438,21 +1448,21 @@ document_helper_configuration:
               VERSION: 5.1.0
         pdbx_core:
             - NAME: pdbx_core_entry
-              VERSION: 7.0.2
+              VERSION: 7.0.3
             - NAME: pdbx_core_assembly
-              VERSION: 7.0.0
-            - NAME: pdbx_core_polymer_entity
-              VERSION: 7.0.0
-            - NAME: pdbx_core_nonpolymer_entity
-              VERSION: 7.0.0
-            - NAME: pdbx_core_branched_entity
-              VERSION: 7.0.0
-            - NAME: pdbx_core_polymer_entity_instance
-              VERSION: 7.0.0
-            - NAME: pdbx_core_nonpolymer_entity_instance
               VERSION: 7.0.1
+            - NAME: pdbx_core_polymer_entity
+              VERSION: 7.0.1
+            - NAME: pdbx_core_nonpolymer_entity
+              VERSION: 7.0.1
+            - NAME: pdbx_core_branched_entity
+              VERSION: 7.0.1
+            - NAME: pdbx_core_polymer_entity_instance
+              VERSION: 7.0.1
+            - NAME: pdbx_core_nonpolymer_entity_instance
+              VERSION: 7.0.2
             - NAME: pdbx_core_branched_entity_instance
-              VERSION: 7.0.0
+              VERSION: 7.0.1
         bird:
             - NAME: bird
               VERSION: 5.1.0
@@ -1501,6 +1511,9 @@ document_helper_configuration:
         drugbank_core:
             - NAME: drugbank_core
               VERSION: 1.1.0
+        uniprot_core:
+            - NAME: uniprot_core
+              VERSION: 1.0.0
     #
     document_collection_content_filters:
         ihm_dev:
@@ -2259,7 +2272,10 @@ document_helper_configuration:
                 - drugbank_container_identifiers
             EXCLUDE: []
             SLICE:
-
+        uniprot_core:
+            INCLUDE: []
+            EXCLUDE: []
+            SLICE:
     #
     collection_indices:
         ihm_dev:
@@ -2319,9 +2335,9 @@ document_helper_configuration:
             - INDEX_NAME: search_6
               ATTRIBUTE_NAMES:
               - rcsb_id
-            - INDEX_NAME: replace
-              ATTRIBUTE_NAMES:
-              - rcsb_entry_container_identifiers.entry_id
+            #- INDEX_NAME: replace
+            #  ATTRIBUTE_NAMES:
+            #  - rcsb_entry_container_identifiers.entry_id
         pdbx_core_polymer_entity:
             - INDEX_NAME: primary
               ATTRIBUTE_NAMES:
@@ -2572,6 +2588,11 @@ document_helper_configuration:
             - INDEX_NAME: primary
               ATTRIBUTE_NAMES:
               - drugbank_info.drugbank_id
+        uniprot_core:
+            - INDEX_NAME: primary
+              ATTRIBUTE_NAMES:
+              - rcsb_uniprot_container_identifiers.uniprot_id
+
     collection_subcategory_aggregates:
         bird_chem_comp_core:
             - NAME: resource_lineage
@@ -2609,6 +2630,10 @@ document_helper_configuration:
               HAS_UNIT_CARDINALITY: True
             - NAME: connect_partner
               HAS_UNIT_CARDINALITY: True
+            - NAME: rcsb_gene_name
+              HAS_UNIT_CARDINALITY: False
+            - NAME: related_annotation_lineage
+              HAS_UNIT_CARDINALITY: False
         pdbx_core_nonpolymer_entity:
             - NAME: taxonomy_lineage
               HAS_UNIT_CARDINALITY: False
@@ -2663,6 +2688,8 @@ document_helper_configuration:
               HAS_UNIT_CARDINALITY: True
             - NAME: connect_partner
               HAS_UNIT_CARDINALITY: True
+            - NAME: rcsb_gene_name
+              HAS_UNIT_CARDINALITY: False
         pdbx_core_polymer_entity_instance:
             - NAME: taxonomy_lineage
               HAS_UNIT_CARDINALITY: False
@@ -3144,19 +3171,21 @@ document_helper_configuration:
         bird_chem_comp_core:
             - resource_lineage
         pdbx_core_polymer_entity:
-            - taxonomy_lineage
-            - rcsb_ec_lineage
-            - rcsb_macromolecular_names_combined
-            - rcsb_enzyme_class_combined
-            - feature_ranges
-            - feature_positions
-            - feature_value
             - aligned_regions
-            - related_annotation_identifiers
-            - reference_sequence_identifiers
-            - feature_class_lineage
-            - connect_target
             - connect_partner
+            - connect_target
+            - feature_class_lineage
+            - feature_positions
+            - feature_ranges
+            - feature_value
+            - rcsb_ec_lineage
+            - rcsb_enzyme_class_combined
+            - rcsb_gene_name
+            - rcsb_macromolecular_names_combined
+            - reference_sequence_identifiers
+            - related_annotation_identifiers
+            - related_annotation_lineage
+            - taxonomy_lineage
         pdbx_core_nonpolymer_entity:
             - taxonomy_lineage
             - rcsb_ec_lineage
@@ -3555,16 +3584,11 @@ document_helper_configuration:
           - rcsb_entity_host_organism.ncbi_common_names
           - rcsb_polymer_entity.pdbx_description
           - rcsb_polymer_entity.rcsb_macromolecular_names_combined
-          - rcsb_entity_container_identifiers.reference_sequence_identifiers_database_accession
+          - rcsb_polymer_entity_container_identifiers.reference_sequence_identifiers_database_accession
           - rcsb_entity_source_organism.ncbi_scientific_name
         - SEARCH_TYPE: exact-match
           ATTRIBUTE_NAMES:
           - entity_poly.rcsb_entity_polymer_type
-          - rcsb_entity_container_identifiers.entry_id
-          - rcsb_entity_container_identifiers.rcsb_id
-          - rcsb_entity_container_identifiers.reference_sequence_identifiers_database_accession
-          - rcsb_entity_container_identifiers.reference_sequence_identifiers_database_isoform
-          - rcsb_entity_container_identifiers.reference_sequence_identifiers_database_name
           - rcsb_entity_host_organism.common_name
           - rcsb_entity_host_organism.ncbi_common_names
           - rcsb_entity_host_organism.ncbi_parent_scientific_name
@@ -3579,6 +3603,15 @@ document_helper_configuration:
           - rcsb_entity_source_organism.scientific_name
           - rcsb_entity_source_organism.taxonomy_lineage_id
           - rcsb_entity_source_organism.taxonomy_lineage_name
+          - rcsb_polymer_entity_container_identifiers.entry_id
+          - rcsb_polymer_entity_container_identifiers.rcsb_id
+          - rcsb_polymer_entity_container_identifiers.reference_sequence_identifiers_database_accession
+          - rcsb_polymer_entity_container_identifiers.reference_sequence_identifiers_database_isoform
+          - rcsb_polymer_entity_container_identifiers.reference_sequence_identifiers_database_name
+          - rcsb_polymer_entity_container_identifiers.related_annotation_lineage_id
+          - rcsb_polymer_entity_container_identifiers.related_annotation_lineage_name
+          - rcsb_polymer_entity_container_identifiers.related_annotation_identifiers_resource_identifier
+          - rcsb_polymer_entity_container_identifiers.related_annotation_identifiers_resource_name
           - rcsb_polymer_entity_feature_summary.type
           - rcsb_polymer_entity_feature.feature_class_lineage_id
           - rcsb_polymer_entity_feature.feature_class_lineage_name
@@ -3663,6 +3696,7 @@ document_helper_configuration:
       pdbx_core_nonpolymer_entity:
         - SEARCH_TYPE: exact-match
           ATTRIBUTE_NAMES:
+          - rcsb_nonpolymer_entity_container_identifiers.rcsb_id
           - rcsb_nonpolymer_entity_container_identifiers.nonpolymer_comp_id
           - rcsb_nonpolymer_entity_container_identifiers.prd_id
           - rcsb_nonpolymer_entity_container_identifiers.reference_chemical_identifiers_database_name
@@ -3692,8 +3726,13 @@ document_helper_configuration:
       pdbx_core_branched_entity:
         - SEARCH_TYPE: exact-match
           ATTRIBUTE_NAMES:
-          - rcsb_branched_entity_feature.type
+          - rcsb_branched_entity_container_identifiers.chem_comp_monomers
+          - rcsb_branched_entity_container_identifiers.entry_id
+          - rcsb_branched_entity_container_identifiers.entity_id
+          - rcsb_branched_entity_container_identifiers.prd_id
+          - rcsb_branched_entity_container_identifiers.rcsb_id
           - rcsb_branched_entity_feature_summary.type
+          - rcsb_branched_entity_feature.type
         - SEARCH_TYPE: default-match
           ATTRIBUTE_NAMES:
           - rcsb_branched_entity.formula_weight
@@ -3705,8 +3744,6 @@ document_helper_configuration:
           ATTRIBUTE_NAMES:
           - rcsb_branched_entity.details
           - rcsb_branched_entity.pdbx_description
-          - rcsb_branched_entity_container_identifiers.chem_comp_monomers
-          - rcsb_branched_entity_container_identifiers.prd_id
           - rcsb_branched_entity_feature.feature_class_lineage_id
           - rcsb_branched_entity_feature.feature_class_lineage_name
           - rcsb_branched_entity_feature.description
@@ -3719,7 +3756,12 @@ document_helper_configuration:
       pdbx_core_polymer_entity_instance:
         - SEARCH_TYPE: exact-match
           ATTRIBUTE_NAMES:
-          - rcsb_entity_instance_container_identifiers.rcsb_id
+          - rcsb_polymer_entity_instance_container_identifiers.rcsb_id
+          - rcsb_polymer_entity_instance_container_identifiers.entry_id
+          - rcsb_polymer_entity_instance_container_identifiers.entity_id
+          - rcsb_polymer_entity_instance_container_identifiers.asym_id
+          - rcsb_polymer_entity_instance_container_identifiers.auth_asym_id
+          #
           - rcsb_polymer_instance_feature.feature_class_lineage_id
           - rcsb_polymer_instance_feature.feature_class_lineage_name
           - rcsb_polymer_instance_feature.feature_id
@@ -3744,6 +3786,11 @@ document_helper_configuration:
       pdbx_core_nonpolymer_entity_instance:
         - SEARCH_TYPE: exact-match
           ATTRIBUTE_NAMES:
+          - rcsb_nonpolymer_entity_instance_container_identifiers.rcsb_id
+          - rcsb_nonpolymer_entity_instance_container_identifiers.entry_id
+          - rcsb_nonpolymer_entity_instance_container_identifiers.entity_id
+          - rcsb_nonpolymer_entity_instance_container_identifiers.asym_id
+          - rcsb_nonpolymer_entity_instance_container_identifiers.auth_asym_id
           - rcsb_nonpolymer_instance_feature.type
           - rcsb_nonpolymer_instance_feature_summary.type
           - rcsb_nonpolymer_entity_instance_container_identifiers.comp_id
@@ -3762,6 +3809,11 @@ document_helper_configuration:
       pdbx_core_branched_entity_instance:
         - SEARCH_TYPE: exact-match
           ATTRIBUTE_NAMES:
+          - rcsb_branched_entity_instance_container_identifiers.rcsb_id
+          - rcsb_branched_entity_instance_container_identifiers.entry_id
+          - rcsb_branched_entity_instance_container_identifiers.entity_id
+          - rcsb_branched_entity_instance_container_identifiers.asym_id
+          - rcsb_branched_entity_instance_container_identifiers.auth_asym_id
           - rcsb_branched_instance_feature.type
           - rcsb_branched_instance_feature_summary.type
           - rcsb_branched_entity_instance_container_identifiers.comp_id
@@ -3791,6 +3843,8 @@ document_helper_configuration:
         - SEARCH_TYPE: exact-match
           ATTRIBUTE_NAMES:
           - rcsb_assembly_container_identifiers.rcsb_id
+          - rcsb_assembly_container_identifiers.entry_id
+          - rcsb_assembly_container_identifiers.assembly_id
           - rcsb_assembly_info.polymer_composition
           - rcsb_assembly_info.selected_polymer_entity_types
           - rcsb_assembly_info.na_polymer_entity_types
@@ -3828,6 +3882,7 @@ document_helper_configuration:
           ATTRIBUTE_NAMES:
           - rcsb_chem_comp_container_identifiers.comp_id
           - rcsb_chem_comp_container_identifiers.drugbank_id
+          - rcsb_chem_comp_container_identifiers.prd_id
           - rcsb_chem_comp_container_identifiers.rcsb_id
           - rcsb_chem_comp_related.resource_accession_code
           - chem_comp.type
